# hestia

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/workflows/: app-android.yml  release.yml
.hardbound/: config.json  session-report-546251a7-37ab-4361-a942-fe6c8b0b4582.txt  session-report-f139d4d7-d746-409b-a0a9-bc88a4ff4610.txt  signing.pub
.hardbound/actors/claude/: chain-head.json  signing.pub  state.json
.hardbound/actors/dp/: state.json
.hardbound/bundles/: 00660508-a56b-4cbd-bac4-2a265b783a8b.json  007d2088-53d9-4945-9531-747b830c12f1.json  00bcaad1-3c60-4bf1-a5b1-831cdfe9bc68.json  00c60940-40d0-4b0b-ae4b-5566aed379a0.json  016d4ff4-2497-42c7-983b-28dfda82ccb9.json  01a56343-096a-4f96-b3f9-1e319871f975.json  01bc2ea4-892b-495e-8e24-5ada9a25a85c.json  01e02e09-be6e-4178-85be-43847c6f29a5.json  01e6c8c5-2bc9-45f2-b053-1677416d9d51.json  0282734e-0c8b-4911-b70a-e861cb3277fa.json  0284bb52-2a91-496c-be09-e7f4310ef5dd.json  02924b85-cc27-4b5e-a353-97005673c20f.json  033a3de9-dc82-452c-9b69-53fde786c030.json  03ad7dcf-6a37-486c-9a42-990cf25bd3b9.json  03aebe2e-a248-41be-9bf0-c6fa83a5660a.json  0411d19c-f9c8-4719-8f48-cd3312c64ef5.json  04bb77cd-a3b4-4490-b3f9-232fcd642122.json  06089cd0-59c5-46b7-a9aa-9a3a99363185.json  07842b8b-07d6-4548-b8a6-a504527afacb.json  07a4374d-774d-4271-8692-0798d6cfb84c.json  07b90d18-79af-4e49-9ebf-5aa466a460ac.json  07c4d13b-a442-4cd8-92fb-1be20c502cf2.json  08512eda-905a-41ed-a762-d9918c4d1d4a.json  08a42a3e-b6e1-45e9-bf6b-e75b01555c1e.json  09261255-78c0-4f79-9a3f-be06cf000021.json  09780d85-cfab-44d1-ad90-1b804a862c4a.json  09a52e12-5880-47a3-bab8-a55814759387.json  0a24fc14-a372-41a9-9e55-3d70bc2f0d57.json  0a9a2ae4-390b-433c-ae2d-36aa8a1a83f6.json  0aeb577e-71c1-4607-bccf-2d1cdac1132a.json  0b0f0905-9da7-4d98-8f58-dad516c48f59.json  0b5ec798-ef80-4eef-a9b1-6f881db4cb4d.json  0bc207c3-97c7-4290-8ea8-c26b388bd3cd.json  0c2b8490-49ff-4da0-aaf0-98c165b47cd3.json  0cff90b8-6272-46d7-877e-22e5f4bd1119.json  0d75f388-9406-44ce-b2af-e6bc4483ae08.json  0dec6861-2c96-4658-8720-0b5dc70533f6.json  0eec618d-f28a-4b98-9cd9-d34fdab1bd35.json  0f5662b3-3dc8-4f04-9e2b-738352ea545f.json  0f6bb79c-49bf-48f5-8ee4-81dc762808ca.json  (+547 more)
app/: index.html  package-lock.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: chain.rs  dashboard.rs  mod.rs  policy.rs  remote.rs  settings.rs  vault.rs
app/src/components/: ChainEntry.tsx  ChainFeed.tsx  StatusBadge.tsx  TensorBar.tsx  ToolHistogram.tsx  TrustCard.tsx
app/src/hooks/: useDashboard.ts
app/src/lib/: tauri.ts  types.ts
app/src/pages/: Chain.tsx  Dashboard.tsx  Delegations.tsx  Fleet.tsx  Hubs.tsx  Policy.tsx  Settings.tsx  Vault.tsx
app/src/styles/: global.css
core/: Cargo.toml  build.rs  rustfmt.toml
core/examples/: constellation_present.rs  first_act.rs
core/src/: callback.rs  cli.rs  constellation.rs  delegation.rs  error.rs  evidence.rs  hub.rs  lct_publish.rs  lib.rs  main.rs  member_registry.rs  orchestrators.rs  pairing.rs  plugin.rs  profile.rs  reputation.rs  role_registry.rs  sovereign.rs  tui.rs  witness.rs  witness_act.rs
core/src/policy/: engine.rs  extract.rs  law_gate.rs  matchers.rs  mod.rs  presets.rs  rate_limit.rs  types.rs
core/src/server/: dashboard.rs  handler.rs  http.rs  mod.rs  operator_auth.rs  state.rs
core/src/server/dashboard/: index.html
core/src/storage/: chain.rs  inbox.rs  mod.rs  trust.rs
core/src/vault/: crypto.rs  document.rs  entry.rs  mod.rs  policy_state.rs  storage.rs
core/tests/: persistence.rs
demo/: README.md
demo/consumer/: README.md  package-lock.json  package.json  run.mjs  transcript.txt
demo/enterprise/: README.md
deploy/: README.md
deploy/cbp/: README.md
deploy/fleet/: ROSTER.md  install.sh  replication-plan.md
deploy/templates/: hestia.service  io.hestia.tools.plist
docs/: APP_BUILD_PLAN.md  ARCHITECTURE.md  DASHBOARD.md  DEVICE_VAULT_LIFECYCLE.md  GATE_PROFILE.md  PLUGIN_AUTHORING_GUIDE.md  PROTOCOL.md  V3_EVIDENCE_EVENTS.md
docs/DESIGN_DECISIONS/: 0001-name-hestia.md  0002-positioning-as-layer-not-application.md  0003-license-agpl.md  0004-pak-extraction-from-existing-plugins.md  0005-mcp-surface.md
docs/proposals/: 2026-07-16-role-launcher-and-path-scope-gate.md  2026-07-18-PRD-sealed-secret-send-client-verb.md
forum/gpt/: hestia_constellation_assurance_bug_analysis.md
hardbound-pak/python/: README.md  pyproject.toml
hardbound-pak/python/hardbound/: __init__.py  protocols.py
hardbound-pak/rust/: Cargo.toml  README.md
hardbound-pak/rust/src/: attestation.rs  error.rs  lib.rs  policy.rs  sealed_vault.rs  trusted_key.rs
hardbound-pak/typescript/: README.md  package-lock.json  package.json  tsconfig.json
hardbound-pak/typescript/src/: index.ts
integrations/claude-code/hooks/: hestia_witness.py  post_tool_use.sh
integrations/interchange/: README.md  demo.mjs  hestia-vault-backend.ts  hestia-vault.mjs
plugin-sdk/python/: README.md  pyproject.toml
plugin-sdk/python/hestia_plugin_sdk/: __init__.py  client.py  errors.py  transport.py  types.py
plugin-sdk/python/tests/: mock_hestia_server.py  test_smoke.py
plugin-sdk/python/tests/conformance/: test_conformance.py
plugin-sdk/rust/: Cargo.toml  README.md
plugin-sdk/rust/src/: client.rs  errors.rs  lib.rs  transport.rs  types.rs
plugin-sdk/rust/tests/: conformance.rs  unit_tests.rs
plugin-sdk/typescript/: package.json  tsconfig.json
plugin-sdk/typescript/src/: client.ts  errors.ts  index.ts  transport.ts  types.ts
plugins/claude-code/: README.md
plugins/claude-code/hooks/: witness.py  (+1 more)
plugins/codex/: AGENTS.md  README.md
plugins/gemini/: GEMINI.md  README.md
plugins/kimi/: AGENTS.md  README.md  kimi.plugin.json
plugins/lib/: path_scope.py
plugins/member-mesh/: KINDS.md  fire-claude.sh  fire-kimi.sh  hestia-mesh.py  hestia-watch-member.sh  session-mesh-inbox.sh
plugins/openclaw/: README.md  package-lock.json  package.json  tsconfig.json
(+32 files in other folders)
