[package]
name = "hestia"
version = "0.0.3"
edition = "2021"
authors = ["dp-web4 <dp@metalinxx.io>"]
description = "Hestia — local-first Web4 trust layer for AI agents. The core daemon: credential vault, MCP server, society state, witness chain."
license = "AGPL-3.0-or-later"
repository = "https://github.com/dp-web4/hestia"
documentation = "https://github.com/dp-web4/hestia"
keywords = ["hestia", "web4", "ai-agent", "vault", "mcp"]
categories = ["cryptography", "authentication", "command-line-utilities"]
rust-version = "1.80"

[lib]
name = "hestia"
path = "src/lib.rs"

[[bin]]
name = "hestia"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
rpassword = "7"

# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Serialization / storage
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System
dirs = "5"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "net", "signal"] }
tokio-util = "0.7"
async-trait = "0.1"

# MCP server
rmcp = { version = "1.7", default-features = false, features = [
    "server",
    "transport-streamable-http-server",
] }
axum = "0.7"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Paired-channel client names the ephemeral X25519 pubkey type directly
# (web4_core::pair_channel::{seal_fs,open_fs} take `&x25519_dalek::PublicKey`).
# Version-matched to web4-core so the transitive type is the same.
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Web4 primitives
web4-core = { path = "../../web4/web4-core" }
# The generic plugin seam — shared with the hub (public open-core crate) instead
# of maintaining a near-identical copy here. `crate::plugin` re-exports it.
hub-plugin = { path = "../../web4/hub/hub-plugin" }
# P3b: consume the sibling web4 checkout by path (matching web4-core / hub-plugin
# above) so hestia builds in lockstep against the migrated EntityTrust, whose T3/V3
# are now the canonical `web4_core::t3::T3` / `web4_core::v3::V3`. This unifies the
# single web4-core source across the dependency graph (no duplicate tensor types).
web4-trust-core = { path = "../../web4/web4-trust-core", features = ["file-store"] }
# Consolidation (2026-07-10, hestia-role-orchestration): chapter-law norms
# evaluate in the ONE canonical crate the hub uses — closing the two-engines
# drift seam CBP flagged. Same P3b by-path pattern as the deps above.
web4-policy = { path = "../../web4/web4-policy" }
# serde_yaml: the web4-policy law payload type (R6Request.payload)
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# TUI dashboard
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Policy engine
regex = "1"
globset = "0.4"
chrono-tz = "0.10"

[dev-dependencies]
tempfile = "3"
