[package]
name = "hardbound"
version = "0.0.1"
edition = "2021"
authors = ["dp-web4 <dp@metalinxx.io>"]
description = "Hardbound — public trait surface for the enterprise hardware-bound trust tier of Web4. Implementations of these traits anchor identity, vault, witness chain, and policy in TPM 2.0 / YubiKey / Secure Enclave hardware. The reference closed-source implementation is at metalinxx.io; this crate is the contract any compatible implementation must satisfy."
license = "AGPL-3.0-or-later"
repository = "https://github.com/dp-web4/hestia"
homepage = "https://hestia.tools"
documentation = "https://docs.rs/hardbound"
readme = "README.md"
keywords = ["trust", "tpm", "attestation", "web4", "hardbound"]
categories = ["cryptography", "authentication", "no-std::no-alloc"]
rust-version = "1.80"

[lib]
name = "hardbound"
path = "src/lib.rs"

[dependencies]
thiserror = "2"

[dev-dependencies]
