[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia-plugin-sdk"
version = "0.0.2"
description = "Hestia Plugin Authoring Kit (Python) — author Hestia plugins for Python AI agents. Wraps R6/R7 record building, Soft LCT session identity, policy query, credential vault, and witness chain emission."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{name = "dp-web4", email = "dp@metalinxx.io"}]
keywords = ["hestia", "web4", "ai-agent", "plugin", "trust", "governance", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.27",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.urls]
Homepage = "https://hestia.tools"
Documentation = "https://github.com/dp-web4/hestia/blob/main/docs/PLUGIN_AUTHORING_GUIDE.md"
Repository = "https://github.com/dp-web4/hestia"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "uvicorn>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["hestia_plugin_sdk*"]
