[package]
name = "hestia-plugin-sdk"
version = "0.0.2"
edition = "2021"
authors = ["dp-web4 <dp@metalinxx.io>"]
description = "Hestia Plugin Authoring Kit (Rust) — author Hestia plugins for Rust AI agents. Wraps R6/R7 record building, Soft LCT session identity, policy query, credential vault, and witness chain emission."
license = "AGPL-3.0-or-later"
repository = "https://github.com/dp-web4/hestia"
documentation = "https://github.com/dp-web4/hestia/blob/main/docs/PLUGIN_AUTHORING_GUIDE.md"
keywords = ["hestia", "web4", "ai-agent", "plugin", "mcp"]
categories = ["api-bindings", "authentication"]
rust-version = "1.80"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.7", default-features = false, features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum = "0.7"
rmcp = { version = "1.7", default-features = false, features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "server",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = ["full"] }
